--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Name: Ironhacker
-    Age: 25
-    Favorite Color: Yellow
-</body>
-</html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="container">
+            Name: Ironhacker
+            Age: 25
+            Favorite Color: Yellow
+            <div>ハビット</div>
+            <div>ハビット</div>
+            <div>ハビット</div>
+            <div>ハビット</div>
+            <div>ハビット</div>
+            <div>ハビット</div>
+            <div>ハビット</div>
+            <div>ハビット</div>
+            <div>ハビット</div>
+            <div>ハビット</div>
+        </div>
+    </body>
+    </html>
